Revert "fixed login button alignment"
This reverts commit 978cd8c244e538ab091bfbb52954711ff1e26a2d.

I messed up

--- a/V2/anees-photos/src/app/login/login.component.css
+++ b/V2/anees-photos/src/app/login/login.component.css
@@ -1,6 +1,3 @@
-div{
-
-}
 .login-container {
     position: relative;
     /* background: white; */
@@ -52,31 +49,7 @@ div{
 }
 
 .password-field-container{
-    align-items: center;
     padding: 20px 0px;
-    display: flex !important;
-}
-.password-field-container > .input-field{
-    margin: 10px;
-    background-color: #171717;
-    border-width: 2px;
-    border-color: #3f4042;
-    width: 60%;
-
-}
-.password-field-container >.btn.primary {
-    background-color: white;
-    color: black;
-    border-radius: 0px;
-    transition-duration: 0.4s;
-    border-width: 1px;
-    border-color: #3f4042;
-    height: 35px;
-}
-
-.password-field-container >.btn.primary:hover{
-    background-color: #171717;
-    color: gray;
 }
 
 .arrow-container{
